--- a/Project/Project/Properties/Resources.resx
+++ b/Project/Project/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="grupo1-imgcampaingw1.st" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\grupo1-imgcampaingw1.st.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="zara_michiganavenue_chicago2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zara_michiganavenue_chicago2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
